# goodreads-Scraper

./: README.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
book-review-scraper/: data_storage.py  main.py
book-review-scraper/data/: books.db
book-review-scraper/tests/: test_my_project.py
brs/: data_extraction.py  data_storage.py  items.py  pipelines.py  settings.py
brs/spiders/: goodreads_spider.py
brs/tests/: test_data_extraction.py  test_data_storage.py  test_my_project.py
data/: books.db  schema.sql
src/: data_extraction.py  data_storage.py
tests/: test_my_project.py
