[tool.poetry]
name = "brs"
version = "0.1.1"
description = "This project extracts the top 30 books and most read this week on goodreads in six different genres: Science Fiction, Travel, Thriller, Poetry, Fantasy, and Business. The extracted data is then stored in a SQLite database."
authors = ["Anas Suffo <anassaffo@gmail.com>"]
readme = "README.md"
license = "Proprietary"
packages = [
    { include = "brs" }
]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.9.3"
pandas = "^1.2.4"
requests = "^2.25.1"
scrapy = "^2.10.0"
ruff = "^0.0.284"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
